# honeycloud

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  tree.txt
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  main.py
cowrie/: cowrie.cfg
cowrie/honeyfs/etc/: crontab  hosts  issue  motd  passwd  shadow
cowrie/honeyfs/etc/ssh/: sshd_config
cowrie/honeyfs/home/jash/: todo.txt
cowrie/honeyfs/proc/: cpuinfo  meminfo  version
cowrie/honeyfs/root/: .bash_history
cowrie/honeyfs/root/.aws/: credentials
cowrie/honeyfs/root/.ssh/: authorized_keys  id_rsa
cowrie/honeyfs/var/www/: README.txt
cowrie/honeyfs/var/www/html/: .env  index.html
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: clients.ts
frontend/src/components/: AppShell.tsx  AttackMap.tsx  AttackTypeDonut.tsx  BiLSTMForecast.tsx  Header.tsx  HourlyTimeline.tsx  LiveFeed.tsx  MetricCards.tsx  SessionKillChain.tsx  TopIPs.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  IPLookup.tsx  Landing.tsx  ThreatIntel.tsx
frontend/src/types/: index.ts
frontend/src/utils/: geo.ts
honeycloud/: cli.py  collector.py  deploy.py  monitor.py  score.py
honeycloud/models/: bilstm_model.keras  bilstm_model.onnx  bilstm_model.tflite  feature_cols.json  feature_cols_cic.json  hornet40_baseline.json  isolation_forest.pkl  label_encoder.pkl  lstm_scaler.pkl  random_forest.pkl  xgboost_classifier.pkl
layer2/: cowrie_parser.py
layer2/models/: feature_cols.json
layer2/notebooks/: honeycloud_ml_pipeline.ipynb
tests/: test_honeycloud.py
