[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeycloud"
version = "0.1.0"
description = "Adaptive cloud honeypot platform — deploy decoys, monitor attacks, score threats with ML"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "HoneyCloud Team" }]
keywords = ["honeypot", "cybersecurity", "threat-intelligence", "anomaly-detection", "deception"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
]

[project.scripts]
honeycloud = "honeycloud.cli:main"

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/honeycloud"
Repository = "https://github.com/YOUR_USERNAME/honeycloud"
Issues     = "https://github.com/YOUR_USERNAME/honeycloud/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["honeycloud*"]

[tool.setuptools.package-data]
honeycloud = ["../data/*.csv"]
