[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeycloud"
version = "0.1.8"
description = "Adaptive cloud honeypot platform — deploy decoys, monitor attacks, score threats with ML"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "HoneyCloud Team" }]
keywords = ["honeypot", "cybersecurity", "threat-intelligence", "anomaly-detection", "deception"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "scikit-learn>=1.6",
    "xgboost>=2.0",
    "joblib>=1.3",
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
honeycloud = "honeycloud.cli:main"

[project.urls]
Homepage   = "https://github.com/JashRashne/honeycloud"
Repository = "https://github.com/JashRashne/honeycloud"
Issues     = "https://github.com/JashRashne/honeycloud/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["honeycloud*"]

[tool.setuptools.package-data]
honeycloud = ["models/*.pkl", "models/*.json", "models/*.onnx"]